--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.27.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-player": "^2.11.0",
     "react-router-dom": "^6.4.1"
   },
   "devDependencies": {
